Use 100svh instead of 100vh to fix iphone url bar overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body {
 .App {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
+  min-height: 100svh;
   display: flex;
   align-items: center;
   justify-content: center;
